force-app/main/default/objects/Financials__c/Financials__c.object-meta.xml
<CustomObject>
    <description>Read only in Salesforce and updated via Beacon.</description>
    <label>Financials</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Financial ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>