force-app/main/default/objects/Financials__c/fields/Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager__c</fullName>
    <formula>Account__r.Account_Owner_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Manager</label>
    <type>Text</type>
</CustomField>