force-app/main/default/objects/Financials__c/fields/Account_Revenue_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Account_Revenue_Rollup__c</fullName>
    <label>Account Revenue Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Year</fullName>
            </value>
            <value>
                <fullName>Previous Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>