force-app/main/default/objects/Financials__c/fields/Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_ID__c</fullName>
    <formula>IF(Account__r.RecordType.Name = &apos;Customer Location&apos;, Account__r.Parent.Account_ID_18__c , Account__r.Account_ID_18__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account ID</label>
    <type>Text</type>
</CustomField>