force-app/main/default/objects/Financials__c/fields/Customer_Oil_Gallons_Collected__c.field-meta.xml
<CustomField>
    <fullName>Customer_Oil_Gallons_Collected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Gallons collected by the Customer (only populated for Customer WIN IDs)</description>
    <label>Customer Oil Gallons Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>