force-app/main/default/objects/Financials__c/fields/Customer_Oil_Gallons_Sold__c.field-meta.xml
<CustomField>
    <fullName>Customer_Oil_Gallons_Sold__c</fullName>
    <description>Number of Oil Gallons sold by the customer (only populated for Customer WIN IDs)</description>
    <label>Customer Oil Gallons Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>