force-app/main/default/objects/Financials__c/fields/Customer_WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_WIN_ID__c</fullName>
    <formula>IF(or(Account__r.RecordType.Name = &apos;Customer Location&apos;, Account__r.RecordType.Name = &apos;Broker Location&apos;, Account__r.RecordType.Name = &apos;Distributor Location&apos;), Account__r.Parent.WIN_ID__c, Account__r.WIN_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer WIN ID</label>
    <type>Text</type>
</CustomField>