force-app/main/default/objects/Financials__c/fields/Financial_key_c__c.field-meta.xml
<CustomField>
    <fullName>Financial_key_c__c</fullName>
    <description>Mapping key used for SSIS Sync revenue and budget data from Beacon and bidw to sf</description>
    <externalId>true</externalId>
    <inlineHelpText>Mapping key used for SSIS Sync revenue and budget data from Beacon and bidw to sf</inlineHelpText>
    <label>Financial_Record_Key</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>