force-app/main/default/objects/Financials__c/fields/Financial_Sort__c.field-meta.xml
<CustomField>
    <fullName>Financial_Sort__c</fullName>
    <formula>if ( and(RecordType.Name = &quot;Budget&quot;, MONTH( today() ) &lt; MONTH( Month__c )) , &quot;Future - &quot; &amp; text(Month__c), if(and(MONTH(today()) = MONTH(Month__c),YEAR(today()) = YEAR(Month__c)), &quot;Present - &quot;, &quot;Past - &quot;) &amp; text(Month__c))&amp; &quot; - &quot; &amp; left(RecordType.Name,3) &amp; &quot; - &quot; &amp; text(Line_of_business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Sort</label>
    <type>Text</type>
</CustomField>