force-app/main/default/objects/Financials__c/fields/Insert_By__c.field-meta.xml
<CustomField>
    <fullName>Insert_By__c</fullName>
    <label>Insert By</label>
    <length>85</length>
    <type>Text</type>
</CustomField>