force-app/main/default/objects/Financials__c/fields/Key_Account_Amount__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Amount__c</fullName>
    <description>Key Account rolled up financial amount</description>
    <label>Corporate Account Amount $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>