force-app/main/default/objects/Financials__c/fields/Key_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Flag__c</fullName>
    <formula>Account__r.RecordType.Name = &quot;Corporate&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Account Flag</label>
    <type>Checkbox</type>
</CustomField>