force-app/main/default/objects/Financials__c/fields/Key_Account_Oil_Gallons_Collected__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Oil_Gallons_Collected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Key Account oil gallons collected</description>
    <label>Corporate Account Oil Gallons Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>