force-app/main/default/objects/Financials__c/fields/Location_Oil_Gallons_Collected__c.field-meta.xml
<CustomField>
    <fullName>Location_Oil_Gallons_Collected__c</fullName>
    <description>Number of Oil Gallons collected by this location</description>
    <label>Location Oil Gallons Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>