force-app/main/default/objects/Financials__c/fields/Location_Oil_Gallons_Sold__c.field-meta.xml
<CustomField>
    <fullName>Location_Oil_Gallons_Sold__c</fullName>
    <description>Number of Oil Gallons sold to this location.</description>
    <label>Location Oil Gallons Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>