force-app/main/default/objects/Financials__c/fields/Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Operating_Segment__c</fullName>
    <formula>text(Product__r.Operating_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Segment</label>
    <type>Text</type>
</CustomField>