force-app/main/default/objects/Financials__c/fields/Total_Location_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Location_Amount__c</fullName>
    <formula>IF(AND(ISPICKVAL(Line_of_business__c,&quot;Charge for Oil Revenue&quot;),NOT(ISBLANK(Location_Oil_Gallons_Collected__c))),(Location_Oil_Gallons_Collected__c),Amount__c + Location_Oil_Gallons_Collected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Location Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>