force-app/main/default/objects/Financials__c/fields/TPM_indicator__c.field-meta.xml
<CustomField>
    <fullName>TPM_indicator__c</fullName>
    <formula>and(
Not(CONTAINS(text(Line_of_business__c), &apos;Blended Oil Sales&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Oil Filter&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Oil Revenue&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Oily Water&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Parts Washing&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Base Oil Sales&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;KPP&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Specialty Refinery Products&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Containerized Waste&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Allied&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;Vac Services&apos;))
,Not(CONTAINS(text(Line_of_business__c), &apos;RFO&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPM indicator</label>
    <type>Checkbox</type>
</CustomField>