force-app/main/default/objects/Financials__c/fields/Type_and_Lob__c.field-meta.xml
<CustomField>
    <fullName>Type_and_Lob__c</fullName>
    <description>Type and LOB formula to show on mobile device</description>
    <formula>TEXT(Type__c) &amp; &quot; - &quot; &amp;  TEXT(Line_of_business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type and Lob</label>
    <type>Text</type>
</CustomField>