force-app/main/default/objects/Financials__c/fields/Update_By__c.field-meta.xml
<CustomField>
    <fullName>Update_By__c</fullName>
    <label>Update By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>