force-app/main/default/objects/Financials__c/fields/WIN_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID_Type__c</fullName>
    <formula>Account__r.WIN_ID_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIN ID - Type</label>
    <type>Text</type>
</CustomField>