force-app/main/default/objects/Financials__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <description>Record type contains all budgets in relationship to a customer account</description>
    <label>Budget</label>
</RecordType>