force-app/main/default/objects/Financials__c/recordTypes/Revenue.recordType-meta.xml
<RecordType>
    <fullName>Revenue</fullName>
    <active>true</active>
    <description>Revenue for all customer &amp; growth budgets</description>
    <label>Revenue</label>
</RecordType>